--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
+{{navbar()}}
 <form id="contact-form">
     <input type="text" name="name" placeholder="Votre nom" required>
     <input type="email" name="user_email" placeholder="Votre e-mail" required>
@@ -10,6 +11,32 @@
     <button type="submit">Envoyer</button>
 </form>
 <div id="form-message"></div>
+
+
+<div id="contact-form" class="form-container">
+      <div class="form">
+      <div class="logo-container" style="margin-bottom: 10px;">
+        <strong>Envoyer un avis ? 📝</strong>
+      </div>
+
+        <div class="form-group">
+          <label for="nom_contact">Votre nom</label>
+          <input id="nom_contact" type="text" name="name" placeholder="Votre nom" required>
+        </div>
+
+        <div class="form-group">
+          <label for="email_contact">Votre Email</label>
+          <input id="email_contact"type="email" name="user_email" placeholder="Votre e-mail" required>
+        </div>
+
+        <div class="form-group-checkbox">
+          <label style="margin-right:10px;">Votre message</label>
+          <textarea name="message" placeholder="Votre message" required></textarea>
+        </div>
+
+        <button type="submit">Envoyer</button>
+      </div>
+</div>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script type="text/javascript">
